# apsis

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  dashboard.py  paper.bib  paper.md  pyproject.toml  run.toml.example  rustfmt.toml  tarpaulin-report.html
crates/apsis/: Cargo.toml  build.rs
crates/apsis-1pn/: Cargo.toml  README.md  build.rs
crates/apsis-1pn-py/: .gitignore  Cargo.toml  README.md  pyproject.toml  pyrightconfig.json
crates/apsis-1pn-py/python/apsis_1pn/: __init__.py  __init__.pyi  _native.pyi
crates/apsis-1pn-py/src/: lib.rs
crates/apsis-1pn-py/tests/: test_smoke.py
crates/apsis-1pn/examples/: continuity_spike_bound.rs  error_budget_run.rs  mercury_1pn_geometric.rs  mercury_1pn_long_horizon_ias15.rs  mercury_1pn_long_horizon_mercurius.rs  mercury_perihelion.rs  reboundx_parity_gr.rs
crates/apsis-1pn/src/: lib.rs
crates/apsis-1pn/tests/: continuity_theory_match.rs  exactness_theory_match.rs  kernel_continuity_counter_test.rs  mercury_precession_gate.rs  plummer_cluster_registration_gate.rs  softened_plummer_precession_validation.rs  truncated_plummer_continuity_validation.rs
crates/apsis-app/: Cargo.toml
crates/apsis-app/src/: lib.rs  main.rs
crates/apsis-app/src/app/: canvas.rs  config.rs  diagnostics.rs  mod.rs  notifications.rs  perturbation.rs  render_hints.rs  theme.rs  ui.rs
crates/apsis-app/src/app/camera/: input.rs  mod.rs
crates/apsis-app/src/app/design/: fonts.rs  mod.rs  primitives.rs  theme.rs  tokens.rs
crates/apsis-app/src/app/inspector/: data.rs  format.rs  mod.rs  unit_strategy.rs  view.rs
crates/apsis-app/src/app/panel/: inspector.rs  mod.rs  notifications_panel.rs  playbar.rs  precision_confirmation_modal.rs  precision_panel.rs  (+4 more)
crates/apsis-app/src/render/: bloom.rs  callback_trait.rs  exposure.rs  grid_renderer.rs  hdr.rs  lighting.rs  luminance_reducer.rs  mod.rs  orbit_overlay.rs  orbit_smoother.rs  point_renderer.rs  render_relative.rs  tonemap.rs  trail_renderer.rs  wgpu_backend.rs
crates/apsis-app/tests/: smoke_kittest.rs
crates/apsis-central/: Cargo.toml  README.md  build.rs
crates/apsis-central/examples/: central_observable_inversion_long.rs  central_pattern_b_long.rs
crates/apsis-central/src/: lib.rs
crates/apsis-central/tests/: round_trip_gate.rs
crates/apsis-py/: .gitignore  Cargo.toml  README.md  pyproject.toml  pyrightconfig.json
crates/apsis-py-core/: Cargo.toml  README.md
crates/apsis-py-core/src/: lib.rs
crates/apsis-py/python/apsis/: __init__.py  __init__.pyi  _native.pyi
crates/apsis-py/src/: body.rs  convert.rs  integrator.rs  lib.rs  perturbation.rs  stats.rs  system.rs  trajectory.rs  units.rs
crates/apsis-py/tests/: test_smoke.py
crates/apsis-python/: Cargo.toml  README.md
crates/apsis-python/src/: body.rs  convert.rs  errors.rs  integrator.rs  lib.rs  records.rs  stats.rs  system.rs  trajectory.rs  units.rs
crates/apsis-python/src/operators/: central.rs  gr.rs  mod.rs  radiation.rs
crates/apsis-radiation/: Cargo.toml  README.md  build.rs
crates/apsis-radiation/src/: lib.rs
crates/apsis-radiation/tests/: dust_decay_gate.rs
crates/apsis/benches/: ias15.rs
crates/apsis/benches/common/: baseline.rs  metrics.rs  runner.rs  scenarios.rs
crates/apsis/examples/: conservation_scan.rs  figure_eight.rs  implicit_midpoint_outer_solar.rs  kepler_2body.rs  list_templates.rs  pythagorean_close_encounter.rs  rebound_parity_figure8.rs  rebound_parity_kepler.rs  rebound_parity_mercurius.rs  rebound_parity_plummer_cluster.rs  rebound_parity_pythagorean.rs  rebound_parity_retrograde.rs  recommended_dt_compare.rs  recommended_dt_validation.rs  scaling_benchmark.rs  softened_plummer_sweep.rs  solar_system_long.rs  whfast_outer_solar.rs
crates/apsis/examples/common/: mod.rs  scenarios.rs
crates/apsis/src/: contract.rs  lib.rs  math.rs  units.rs
crates/apsis/src/core/: adaptive.rs  calibration.rs  diagnostics.rs  metrics.rs  mod.rs  physics_thread.rs
crates/apsis/src/domain/: body.rs  body_arrays.rs  body_preset.rs  materials.rs  mod.rs
crates/apsis/src/io/: headless.rs  mod.rs  recorder.rs  snapshot.rs
crates/apsis/src/math/: compensated.rs  vec3.rs
crates/apsis/src/physics/: encounter.rs  energy.rs  engine_ceiling.rs  mod.rs  orbit_hierarchy.rs  orbital.rs  perf_mac.rs  perf_simd.rs  perf_soa.rs  perf_tree_maintenance.rs  photometry.rs
crates/apsis/src/records/: diff.rs  format.rs  frame.rs  header.rs  hook.rs  mod.rs  policy.rs  provenance.rs  reader.rs  resume.rs
crates/apsis/src/templates/: builders.rs  category.rs  core.rs  instantiate.rs  keplerian.rs  kind.rs  mod.rs
crates/apsis/tests/: exact_finish_time.rs  softened_plummer_geometric_gate.rs
crates/gravity-sim-1pn/: Cargo.toml
crates/gravity-sim-1pn/examples/: kepler_sanity.rs  mercury_perihelion.rs
crates/gravity-sim-1pn/src/: lib.rs
crates/gravity-sim-1pn/tests/: mercury_precession_gate.rs
crates/gravity-sim-app/: Cargo.toml
crates/gravity-sim-app/src/: lib.rs  main.rs
crates/gravity-sim-app/src/app/: canvas.rs  config.rs  notifications.rs  render_hints.rs  ui.rs
crates/gravity-sim-app/src/render/: lighting.rs  luminance_reducer.rs  orbit_overlay.rs  tonemap.rs  trail_renderer.rs  wgpu_backend.rs
crates/gravity-sim-core/: Cargo.toml
crates/gravity-sim-core/benches/baselines/: ias15.toml
crates/gravity-sim-core/benches/common/: metrics.rs  runner.rs  scenarios.rs
crates/gravity-sim-core/examples/: figure_eight.rs  kepler_2body.rs  list_templates.rs  pythagorean_close_encounter.rs  solar_system_long.rs
crates/gravity-sim-core/src/: lib.rs
crates/gravity-sim-core/src/core/: adaptive.rs  calibration.rs  diagnostics.rs  mod.rs  physics_thread.rs
crates/gravity-sim-core/src/domain/: body.rs  materials.rs
crates/gravity-sim-core/src/io/: headless.rs  recorder.rs  snapshot.rs
crates/gravity-sim-core/src/physics/: energy.rs  orbit_hierarchy.rs  orbital.rs
crates/gravity-sim-core/src/templates/: catalog.rs  category.rs  core.rs  instantiate.rs  kind.rs  mod.rs
(+541 files in other folders)
