[workspace]
resolver = "2"
members = [
    "crates/apsis",
    "crates/apsis-app",
    "crates/apsis-1pn",
    "crates/apsis-1pn-py",
    "crates/apsis-py",
    "crates/apsis-py-core",
    "crates/apsis-python",
    "crates/apsis-radiation",
    "crates/apsis-central",
]

# `apsis-python` (and the legacy `apsis-py` / `apsis-1pn-py` cdylibs
# being phased out) are Python extension modules. Building them
# requires Python development headers on the host machine; a normal
# Rust contributor working only on the core or app should not be
# forced to install Python just to run `cargo build` at the workspace
# root. Listing them as workspace members but not as default members
# keeps `cargo {build,test,check}` (no `-p`) on a pure Rust toolchain,
# while `cargo {build,test,check} -p apsis-python` (and `maturin
# develop` from the repo root) build them explicitly when the
# contributor opts in.
default-members = [
    "crates/apsis",
    "crates/apsis-app",
    "crates/apsis-1pn",
    "crates/apsis-radiation",
    "crates/apsis-central",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Gabriel Braga Estefanski <gabrielbragaestefanski@gmail.com>"]
rust-version = "1.89"
readme = "README.md"
repository = "https://github.com/gabrielbragaestefanski/apsis"
homepage = "https://github.com/gabrielbragaestefanski/apsis"
keywords = ["n-body", "astrophysics", "simulation", "ias15", "post-newtonian"]
categories = ["science", "simulation", "science::simulation"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "1.1.2", default-features = false, features = ["parse", "display", "serde"] }
rand = "0.10.1"
rayon = "1.12.0"
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }
eframe = "0.34.1"
egui = "0.34.1"
egui-phosphor = { version = "0.12", default-features = false, features = ["regular", "fill"] }
wgpu = "29.0.1"
winit = "0.30.13"
pollster = "0.4.0"
proptest = "1.5"
approx = "0.5"
pretty_assertions = "1.4"
insta = { version = "1.39", features = ["json"] }
criterion = "0.8.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-tracy = "0.11"
egui_kittest = "0.34.1"
