[workspace]
resolver = "2"
members = [
    "crates/apsis",
    "crates/apsis-1pn",
    "crates/apsis-py-core",
    "crates/apsis-python",
    "crates/apsis-radiation",
    "crates/apsis-central",
]

# `apsis-python` is a Python extension module (cdylib). Building it
# requires Python development headers on the host. Excluding it from
# default-members keeps `cargo {build,test,check}` (no `-p`) on a
# pure Rust toolchain; `maturin develop` from the repo root builds
# it explicitly.
default-members = [
    "crates/apsis",
    "crates/apsis-1pn",
    "crates/apsis-radiation",
    "crates/apsis-central",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Gabriel Braga Estefanski <gabrielbragaestefanski@gmail.com>"]
rust-version = "1.89"
readme = "README.md"
repository = "https://github.com/gabrielbragaestefanski/apsis"
homepage = "https://github.com/gabrielbragaestefanski/apsis"
keywords = ["n-body", "astrophysics", "simulation", "ias15", "post-newtonian"]
categories = ["science", "simulation", "science::simulation"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "1.1.2", default-features = false, features = ["parse", "display", "serde"] }
rand = "0.10.1"
rayon = "1.12.0"
blake3 = "1"
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }
proptest = "1.5"
approx = "0.5"
pretty_assertions = "1.4"
insta = { version = "1.39", features = ["json"] }
criterion = "0.8.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-tracy = "0.11"

# ── Profiles ─────────────────────────────────────────────────────────────────

# opt-level=2 for own crates (incremental compile cost) + 3 for deps (cached).
# Default opt-level=0 dominates wall time on IAS15 / parity tests.
[profile.test]
opt-level = 2
debug = true
incremental = true

[profile.test.package."*"]
opt-level = 3
