[package]
name = "apsis-1pn"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Out-of-tree perturbation crate for apsis. Proves the perturbation extension contract is buildable, not just documented. Test-particle 1PN; reproduces Mercury's perihelion precession to 28 ppm of GR cross-platform (CI gate at 100 ppm)."

[lib]
path = "src/lib.rs"

# ── Intentional minimal dependency set ────────────────────────────────────────
#
# This crate's reason to exist is to *prove* that APSIS's public API supports
# an out-of-tree consumer. Adding any other dependency defeats the point — if
# we need something that's not in the public API, that's a gap in the API and
# should be surfaced upstream, not papered over here.
[dependencies]
apsis = { path = "../apsis" }
