# ── Build system ──────────────────────────────────────────────────────────────
#
# Maturin is the canonical build backend for PyO3 extensions; it produces
# wheels (PEP 517 / PEP 660) without requiring a separate `setup.py`.
# Pinning the major version protects the build from breaking changes
# in maturin 2.x; the upper bound moves up after each maturin major
# release once we have validated the new behaviour against this crate.

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

# ── Project metadata (PEP 621) ────────────────────────────────────────────────

[project]
name = "apsis"
description = "Python bindings for the apsis N-body simulation library."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Gabriel Braga Estefanski", email = "gabrielbragaestefanski@gmail.com" },
]
keywords = [
    "n-body",
    "astrophysics",
    "simulation",
    "ias15",
    "post-newtonian",
    "gravity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]

# Runtime dependencies are kept minimal on principle: a researcher
# `pip install`-ing `apsis` should not also be installing pandas,
# matplotlib, scipy, or any other heavy stack. NumPy is the only
# scientific dependency, present because the trajectory-sampling API
# returns ndarrays — without it the alternative is returning lists,
# which forces every researcher to write the conversion loop by hand
# before they can plot anything.

dependencies = [
    "numpy >= 1.20",
]

# `dynamic = ["version"]` defers the version string to maturin, which
# reads it from `Cargo.toml`. This keeps a single source of truth for
# the version (the workspace `[workspace.package].version` field).

dynamic = ["version"]

[project.optional-dependencies]
# Development extras — installed on contributor machines and in CI;
# never on a research user's machine.
dev = [
    "pytest >= 7.0",
    "pytest-cov >= 4.0",
    "mypy >= 1.0",
    "ruff >= 0.5",
]

# Documentation extras — Sphinx + theme + matplotlib (only here because
# the docs render plotted trajectories from examples, not because the
# library proper depends on matplotlib at runtime).
docs = [
    "sphinx >= 7.0",
    "sphinx-rtd-theme >= 2.0",
    "matplotlib >= 3.5",
]

[project.urls]
Homepage = "https://github.com/GabrielEstefanski/gravity-sim"
Source = "https://github.com/GabrielEstefanski/gravity-sim"
Documentation = "https://github.com/GabrielEstefanski/gravity-sim#readme"
Issues = "https://github.com/GabrielEstefanski/gravity-sim/issues"

# ── Maturin configuration ─────────────────────────────────────────────────────
#
# `python-source = "python"` keeps Python source files (`__init__.py`,
# stubs, py.typed marker, eventual pure-Python helpers) in a clearly
# delimited subdirectory so the Rust crate root and the Python package
# root never overlap.
#
# `module-name = "apsis._native"` places the Rust extension under a
# private namespace; the user-facing `apsis` package re-exports
# selectively from it. Mixing pure-Python helpers into `apsis` later
# is a one-line edit to `__init__.py`; we never need to touch the
# Rust side or break import paths.
#
# `features = ["pyo3/extension-module"]` is the same flag declared in
# Cargo.toml; maturin needs it explicitly here too so a `pip install
# .` build path uses the correct linker behaviour.

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "apsis._native"
strip = true

# ── Tooling configuration (mypy, ruff, pytest) ────────────────────────────────
#
# Co-locating tool config in `pyproject.toml` (PEP 518) avoids the
# scatter of `setup.cfg` + `mypy.ini` + `.ruff.toml` + `pytest.ini`
# that older Python projects accumulate. Each tool reads its own
# `[tool.<name>]` table.

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["python/apsis", "tests"]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["python/apsis/_native.pyi"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "RUF",  # ruff-specific
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
