[package]
name = "gravity-sim-1pn"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

# ── Intentional minimal dependency set ────────────────────────────────────────
#
# This crate's reason to exist is to *prove* that gravity-sim-core's public
# API supports an out-of-tree consumer. Adding any other dependency defeats
# the point — if we need something that's not in the public API, that's a gap
# in the API and should be surfaced upstream, not papered over here.
[dependencies]
gravity-sim-core = { path = "../gravity-sim-core" }
