[package]
name = "gravity-sim-1pn"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "First post-Newtonian (Schwarzschild) gravitational correction as an out-of-tree plugin for gravity-sim-core. Reproduces Mercury's perihelion precession to 4.4 ppm of GR."

[lib]
path = "src/lib.rs"

# ── Intentional minimal dependency set ────────────────────────────────────────
#
# This crate's reason to exist is to *prove* that gravity-sim-core's public
# API supports an out-of-tree consumer. Adding any other dependency defeats
# the point — if we need something that's not in the public API, that's a gap
# in the API and should be surfaced upstream, not papered over here.
[dependencies]
gravity-sim-core = { path = "../gravity-sim-core" }
