[package]
name = "gravity-sim-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Interactive egui/wgpu shell for the gravity-sim-core N-body library. Optional; not part of the library's validated public surface."

[[bin]]
name = "gravity-sim"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
gravity-sim-core = { path = "../gravity-sim-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui-phosphor = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true }
